--- a/dSFMT/release/doxygen.cfg
+++ b/dSFMT/release/doxygen.cfg
@@ -17,7 +17,7 @@
 # The PROJECT_NAME tag is a single word (or a sequence of words surrounded 
 # by quotes) that should identify the project.
 
-PROJECT_NAME           = SFMTp
+PROJECT_NAME           = dSFMT
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number. 
 # This could be handy for archiving the generated documentation or 
@@ -465,7 +465,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces.
 
-INPUT                  = SFMTp.h SFMTp.c mainpage.txt
+INPUT                  = dSFMT.h dSFMT.c mainpage.txt
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
