--- a/dSFMT/release/Makefile
+++ b/dSFMT/release/Makefile
@@ -20,7 +20,7 @@
 # using gcc 4.0 of osx.
 
 #WARN = -Wmissing-prototypes -Wall -Winline
-WARN = -Wmissing-prototypes -Wall
+WARN = -Wmissing-prototypes -Wall -W
 OPTI = -O9 -finline-functions -fomit-frame-pointer -DNDEBUG -fno-strict-aliasing
 #STD =
 #STD = -std=c89 -pedantic
@@ -28,12 +28,17 @@ OPTI = -O9 -finline-functions -fomit-frame-pointer -DNDEBUG -fno-strict-aliasing
 STD = -std=c99
 CC = gcc
 CCFLAGS = $(OPTI) $(WARN) $(STD)
-STD_TARGET = test-std-M607
-STD_CHECK_TARGET = check-std
-ALTI_TARGET = $(STD_TARGET) test-alti-M607
-ALTI_CHECK_TARGET = $(STD_CHECK_TARGET) check-alti
-SSE_TARGET = $(STD_TARGET) test-sse2-M607
-SSE_CHECK_TARGET = $(STD_CHECK_TARGET) check-sse2
+STD_TARGET = test-std-M19937
+ALL_STD_TARGET = test-std-M607 test-std-M2281 test-std-M4423 test-std-M11213 \
+test-std-M19937 test-std-M44497 test-std-M86243 test-std-M132049
+ALTI_TARGET = $(STD_TARGET) test-alti-M19937
+ALL_ALTI_TARGET = test-alti-M607 test-alti-M2281 test-alti-M4423 \
+test-alti-M11213 test-alti-M19937 test-alti-M44497 test-alti-M86243 \
+test-alti-M132049
+SSE2_TARGET = $(STD_TARGET) test-sse2-M19937
+ALL_SSE2_TARGET = test-sse2-M607 test-sse2-M2281 test-sse2-M4423 \
+test-sse2-M11213 test-sse2-M19937 test-sse2-M44497 test-sse2-M86243 \
+test-sse2-M132049
 # ======================================
 # comment out or EDIT following settings
 # ======================================
@@ -41,149 +46,118 @@ SSE_CHECK_TARGET = $(STD_CHECK_TARGET) check-sse2
 # for UNIX like system
 # --------------------
 #TARGET = $(STD_TARGET)
-#CHECK_TARGET = $(STD_CHECK_TARGET)
 # -----------------
 # for PowerPC
 # -----------------
 #CCFLAGS = $(CCFLAGS) -faltivec -maltivec -arch ppc
 #TARGET = $(ALTI_TARGET)
-#CHECK_TARGET = $(ALTI_CHECK_TARGET)
 # -----------------
 # for Pentium M
 # -----------------
 #CCFLAGS = $(CCFLAGS) -march=prescott -msse2
 #CC = icl /Wcheck /O3 /QxB /Qprefetch
 #TARGET = $(SSE_TARGET)
-#CHECK_TARGET = $(SSE_CHECK_TARGET)
 # -----------------
 # for Athlon
 # -----------------
 #CCFLAGS = $(CCFLAGS) -march=nocona -msse2
 #TARGET = $(SSE_TARGET)
-#CHECK_TARGET = $(SSE_CHECK_TARGET)
 # -----------------
 # for other sse2 CPU
 # -----------------
 #CCFLAGS = $(CCFLAGS) -msse2
 #TARGET = $(SSE_TARGET)
-#CHECK_TARGET = $(SSE_CHECK_TARGET)
 
 .PHONY: std-check sse2-check alti-check
 
 std: ${STD_TARGET}
 
 sse2:
-	${MAKE} CCFLAGS="${CCFLAGS} -msse2" ${SSE_TARGET}
+	${MAKE} CCFLAGS="${CCFLAGS} -msse2" ${SSE2_TARGET}
 
 alti:
 	${MAKE} CCFLAGS="${CCFLAGS} -faltivec" ${ALTI_TARGET}
 
-std-check:
+std-check: ${ALL_STD_TARGET}
 	./check.sh test-std
 
-sse2-check:
-	CCFLAGS="${CCFLAGS} -msse2"
-	./check.sh test-sse
+sse2-check: ${ALL_SSE2_TARGET}
+	./check.sh test-sse2
 
-alti-check:
-	CCFLAGS="${CCFLAGS} -faltivec"
+alti-check: ${ALL_ALTI_TARGET}
 	./check.sh test-alti
-
-test-ref32-M607: dSFMT-ref.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=607 -DMAIN -o $@ dSFMT-ref.c
 
 test-std-M607: test.c dSFMT.c dSFMT.h
 	${CC} ${CCFLAGS} -DMEXP=607 -o $@ test.c
 
 test-alti-M607: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=607 -DALTIVEC -o $@ test.c
+	${CC} ${CCFLAGS} -faltivec -DMEXP=607 -DALTIVEC -o $@ test.c
 
 test-sse2-M607: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=607 -DSSE2 -o $@ test.c
-
-test-ref-M2281: dSFMT-ref.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=2281 -DMAIN -o $@ dSFMT-ref.c
+	${CC} ${CCFLAGS} -msse2 -DMEXP=607 -DSSE2 -o $@ test.c
 
 test-std-M2281: test.c dSFMT.c dSFMT.h
 	${CC} ${CCFLAGS} -DMEXP=2281 -o $@ test.c
 
 test-alti-M2281: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=2281 -DALTIVEC -o $@ test.c
+	${CC} ${CCFLAGS} -faltivec -DMEXP=2281 -DALTIVEC -o $@ test.c
 
 test-sse2-M2281: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=2281 -DSSE2 -o $@ test.c
+	${CC} ${CCFLAGS} -msse2 -DMEXP=2281 -DSSE2 -o $@ test.c
 
-test-ref-M4253: dSFMT-ref.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=4253 -DMAIN -o $@ dSFMT-ref.c
+test-std-M4423: test.c dSFMT.c dSFMT.h
+	${CC} ${CCFLAGS} -DMEXP=4423 -o $@ test.c
 
-test-std-M4253: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=4253 -o $@ test.c
+test-alti-M4423: test.c dSFMT.c dSFMT.h
+	${CC} ${CCFLAGS} -faltivec -DMEXP=4423 -DALTIVEC -o $@ test.c
 
-test-alti-M4253: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=4253 -DALTIVEC -o $@ test.c
-
-test-sse2-M4253: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=4253 -DSSE2 -o $@ test.c
-
-test-ref-M11213: dSFMT-ref.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=11213 -DMAIN -o $@ dSFMT-ref.c
+test-sse2-M4423: test.c dSFMT.c dSFMT.h
+	${CC} ${CCFLAGS} -msse2 -DMEXP=4423 -DSSE2 -o $@ test.c
 
 test-std-M11213: test.c dSFMT.c dSFMT.h
 	${CC} ${CCFLAGS} -DMEXP=11213 -o $@ test.c
 
 test-alti-M11213: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=11213 -DALTIVEC -o $@ test.c
+	${CC} ${CCFLAGS} -faltivec -DMEXP=11213 -DALTIVEC -o $@ test.c
 
 test-sse2-M11213: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=11213 -DSSE2 -o $@ test.c
-
-test-ref-M19937: dSFMT-ref.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=19937 -DMAIN -o $@ dSFMT-ref.c
+	${CC} ${CCFLAGS} -msse2 -DMEXP=11213 -DSSE2 -o $@ test.c
 
 test-std-M19937: test.c dSFMT.c dSFMT.h
 	${CC} ${CCFLAGS} -DMEXP=19937 -o $@ test.c
 
 test-alti-M19937: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=19937 -DALTIVEC -o $@ test.c
+	${CC} ${CCFLAGS} -faltivec -DMEXP=19937 -DALTIVEC -o $@ test.c
 
 test-sse2-M19937: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=19937 -DSSE2 -o $@ test.c
-
-test-ref-M44497: dSFMT-ref.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=44497 -DMAIN -o $@ dSFMT-ref.c
+	${CC} ${CCFLAGS} -msse2 -DMEXP=19937 -DSSE2 -o $@ test.c
 
 test-std-M44497: test.c dSFMT.c dSFMT.h
 	${CC} ${CCFLAGS} -DMEXP=44497 -o $@ test.c
 
 test-alti-M44497: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=44497 -DALTIVEC -o $@ test.c
+	${CC} ${CCFLAGS} -faltivec -DMEXP=44497 -DALTIVEC -o $@ test.c
 
 test-sse2-M44497: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=44497 -DSSE2 -o $@ test.c
-
-test-ref-M86243: dSFMT-ref.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=86243 -DMAIN -o $@ dSFMT-ref.c
+	${CC} ${CCFLAGS} -msse2 -DMEXP=44497 -DSSE2 -o $@ test.c
 
 test-std-M86243: test.c dSFMT.c dSFMT.h
 	${CC} ${CCFLAGS} -DMEXP=86243 -o $@ test.c
 
 test-alti-M86243: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=86243 -DALTIVEC -o $@ test.c
+	${CC} ${CCFLAGS} -faltivec -DMEXP=86243 -DALTIVEC -o $@ test.c
 
 test-sse2-M86243: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=86243 -DSSE2 -o $@ test.c
-
-test-ref-M132049: dSFMT-ref.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=132049 -DMAIN -o $@ dSFMT-ref.c
+	${CC} ${CCFLAGS} -msse2 -DMEXP=86243 -DSSE2 -o $@ test.c
 
 test-std-M132049: test.c dSFMT.c dSFMT.h
 	${CC} ${CCFLAGS} -DMEXP=132049 -o $@ test.c
 
 test-alti-M132049: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=132049 -DALTIVEC -o $@ test.c
+	${CC} ${CCFLAGS} -faltivec -DMEXP=132049 -DALTIVEC -o $@ test.c
 
 test-sse2-M132049: test.c dSFMT.c dSFMT.h
-	${CC} ${CCFLAGS} -DMEXP=132049 -DSSE2 -o $@ test.c
+	${CC} ${CCFLAGS} -msse2 -DMEXP=132049 -DSSE2 -o $@ test.c
 
 .c.o:
 	${CC} ${CCFLAGS} -c $<
