--- a/dSFMT/release/Makefile.me
+++ b/dSFMT/release/Makefile.me
@@ -1,38 +1,38 @@
 #for GNU make
 
-FILES = SFMTp.h \
-	SFMTp-params.h \
-	SFMTp.c \
-	SFMTp-big64.c \
-	SFMTp-alti32.c \
-	SFMTp-alti64.c \
-	SFMTp-sse2.c \
-	test32.c \
-	test64.c \
+FILES = dSFMT.h \
+	dSFMT-params.h \
+	dSFMT.c \
+	dSFMT-alti.h \
+	dSFMT-alti.c \
+	dSFMT-sse2.h \
+	dSFMT-sse2.c \
+	test.c \
 	check.sh \
-	params607.h \
-	params2281.h \
-	params4253.h \
-	params11213.h \
-	params19937.h \
-	params44497.h \
-	params86243.h \
-	params132049.h \
-	SFMTp.607.out.txt \
-	SFMTp.2281.out.txt \
-	SFMTp.4253.out.txt \
-	SFMTp.11213.out.txt \
-	SFMTp.19937.out.txt \
-	SFMTp.44497.out.txt \
-	SFMTp.86243.out.txt \
-	SFMTp.132049.out.txt \
+	dSFMT-params607.h \
+	dSFMT-params2281.h \
+	dSFMT-params4423.h \
+	dSFMT-params11213.h \
+	dSFMT-params19937.h \
+	dSFMT-params44497.h \
+	dSFMT-params86243.h \
+	dSFMT-params132049.h \
+	dSFMT.607.out.txt \
+	dSFMT.2281.out.txt \
+	dSFMT.4423.out.txt \
+	dSFMT.11213.out.txt \
+	dSFMT.19937.out.txt \
+	dSFMT.44497.out.txt \
+	dSFMT.86243.out.txt \
+	dSFMT.132049.out.txt \
 	FILES.txt \
 	LICENSE.txt \
 	Makefile \
 	README.txt \
+	CHAMGE-LOG.txt \
 	html
 VERSION = 1.0
-DIR = SFMTp-src-${VERSION}
+DIR = dSFMT-src-${VERSION}
 
 doc:
 	rm -rf html
