--- a/Makefile.me
+++ b/Makefile.me
@@ -4,7 +4,9 @@ FILES = SFMT.h \
 	SFMT-params.h \
 	SFMT.c \
 	SFMT-alti.c \
+	SFMT-alti.h \
 	SFMT-sse2.c \
+	SFMT-sse2.h \
 	SFMT-params607.h \
 	SFMT-params1279.h \
 	SFMT-params2281.h \
@@ -37,6 +39,7 @@ DIR = SFMT-src-${VERSION}
 doc:
 	rm -rf html
 	/Applications/Doxygen.app/Contents/Resources/doxygen doxygen.cfg
+	cp howto-compile.html html
 
 .PHONY : tar.gz
 tar.gz: $(FILES)
