--- a/dSFMT/release/Makefile.me
+++ b/dSFMT/release/Makefile.me
@@ -3,28 +3,27 @@
 FILES = dSFMT.h \
 	dSFMT-params.h \
 	dSFMT.c \
-	dSFMT-alti.h \
+	dSFMT-ref.c \
 	dSFMT-alti.c \
-	dSFMT-sse2.h \
 	dSFMT-sse2.c \
 	test.c \
 	check.sh \
 	dSFMT-params607.h \
+	dSFMT-params1279.h \
 	dSFMT-params2281.h \
 	dSFMT-params4423.h \
 	dSFMT-params11213.h \
 	dSFMT-params19937.h \
 	dSFMT-params44497.h \
 	dSFMT-params86243.h \
-	dSFMT-params132049.h \
 	dSFMT.607.out.txt \
+	dSFMT.1279.out.txt \
 	dSFMT.2281.out.txt \
 	dSFMT.4423.out.txt \
 	dSFMT.11213.out.txt \
 	dSFMT.19937.out.txt \
 	dSFMT.44497.out.txt \
 	dSFMT.86243.out.txt \
-	dSFMT.132049.out.txt \
 	FILES.txt \
 	LICENSE.txt \
 	Makefile \
