--- a/dSFMT/release/Makefile.me
+++ b/dSFMT/release/Makefile.me
@@ -4,8 +4,8 @@ FILES = dSFMT.h \
 	dSFMT-params.h \
 	dSFMT.c \
 	dSFMT-ref.c \
-	dSFMT-alti.c \
-	dSFMT-sse2.c \
+	dSFMT-alti.h \
+	dSFMT-sse2.h \
 	test.c \
 	check.sh \
 	dSFMT-params607.h \
@@ -30,7 +30,7 @@ FILES = dSFMT.h \
 	README.txt \
 	CHANGE-LOG.txt \
 	html
-VERSION = 1.0
+VERSION = 1.0.1
 DIR = dSFMT-src-${VERSION}
 
 doc:
