--- a/dSFMT/release/Makefile.me
+++ b/dSFMT/release/Makefile.me
@@ -16,6 +16,7 @@ FILES = dSFMT.h \
 	dSFMT-params19937.h \
 	dSFMT-params44497.h \
 	dSFMT-params86243.h \
+	dSFMT-params132049.h \
 	dSFMT.607.out.txt \
 	dSFMT.1279.out.txt \
 	dSFMT.2281.out.txt \
@@ -24,13 +25,14 @@ FILES = dSFMT.h \
 	dSFMT.19937.out.txt \
 	dSFMT.44497.out.txt \
 	dSFMT.86243.out.txt \
+	dSFMT.132049.out.txt \
 	FILES.txt \
 	LICENSE.txt \
 	Makefile \
 	README.txt \
 	CHANGE-LOG.txt \
 	html
-VERSION = 1.0.1
+VERSION = 1.1
 DIR = dSFMT-src-${VERSION}
 
 doc:
